// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should backup existing 1`] = `
Array [
  ".backup/",
  ".backup/testing.xlsm",
  "testing.xlsm",
]
`;

exports[`should create target 1`] = `
Array [
  "testing.xlsm",
]
`;

exports[`should create target 2`] = `
Array [
  "[Content_Types].xml",
  "_rels/",
  "_rels/.rels",
  "docProps/",
  "docProps/app.xml",
  "docProps/core.xml",
  "xl/",
  "xl/_rels/",
  "xl/_rels/workbook.xml.rels",
  "xl/sharedStrings.xml",
  "xl/styles.xml",
  "xl/theme/",
  "xl/theme/theme1.xml",
  "xl/workbook.xml",
  "xl/worksheets/",
  "xl/worksheets/sheet1.xml",
]
`;

exports[`should remove previous backup 1`] = `
Array [
  ".backup/",
  ".backup/testing.xlsm",
]
`;

exports[`should remove previous backup 2`] = `
Array [
  ".backup/",
  "testing.xlsm",
]
`;
